<resources>
    <string name="app_name">Grocery_store</string>
    <string name="welcome_to_go_green_veggies_online_grocery_store">Welcome to Go Green Veggies online grocery store</string>
    <string name="get_started">Get Started</string>
    <string name="order_vegetables_and_fruits_and_get_delivered_at_your_door_step">Order vegetables and fruits and get delivered at your door step.</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_the_following_details_to_login_into_your_account">Enter the following details to login into your account.</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Sign Up</string>
    <string name="don_t_have_an_account_enter_the_following_credentials_to_create_an_account">Don\'t have an account ,Enter the following credentials to create an account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_page">Cart Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="welcome">Welcome!</string>
</resources>