<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/second"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/order_vegetables_and_fruits_and_get_delivered_at_your_door_step"
        android:textAlignment="center"
        android:textColor="#2B2A2A"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="130pt"
        android:layout_height="27pt"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:backgroundTint="#90C903"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="10pt"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecond" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLog" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="130pt"
        android:layout_height="28pt"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:backgroundTint="#90C903"
        android:textSize="10pt"
        android:fontFamily="monospace"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOr" />
</androidx.constraintlayout.widget.ConstraintLayout>